// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engagement summary card matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card pf-m-compact"
        style="padding: 1rem;"
      >
        <div
          class="pf-c-card__title"
        >
          <div
            class="pf-l-level"
          >
            <div>
              <h3
                class="pf-c-title pf-m-lg"
                style="font-weight: normal;"
              >
                Engagement Summary
                  
                <svg
                  aria-hidden="true"
                  fill="#EC7A08"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    transform=""
                  />
                </svg>
              </h3>
            </div>
            <div />
          </div>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-grid pf-m-gutter"
          >
            <div
              class="pf-l-grid__item"
              style="margin-bottom: 1rem;"
            >
              <b
                style="color: rgb(236, 122, 8);"
              >
                UPCOMING
              </b>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Company
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  NASA
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Project
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Boots on the Moon
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Location
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Nashville, TN
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Description
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  It's rocket science
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Start Date
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Jun 01, 2020
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  End Date
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Jul 01, 2020
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Created By
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  dwasinge
                </p>
              </div>
            </div>
          </div>
        </div>
      </article>
    </div>
    <div />
  </body>,
  "container": <div>
    <article
      class="pf-c-card pf-m-compact"
      style="padding: 1rem;"
    >
      <div
        class="pf-c-card__title"
      >
        <div
          class="pf-l-level"
        >
          <div>
            <h3
              class="pf-c-title pf-m-lg"
              style="font-weight: normal;"
            >
              Engagement Summary
                
              <svg
                aria-hidden="true"
                fill="#EC7A08"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  transform=""
                />
              </svg>
            </h3>
          </div>
          <div />
        </div>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-grid pf-m-gutter"
        >
          <div
            class="pf-l-grid__item"
            style="margin-bottom: 1rem;"
          >
            <b
              style="color: rgb(236, 122, 8);"
            >
              UPCOMING
            </b>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Company
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                NASA
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Project
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Boots on the Moon
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Location
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Nashville, TN
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Description
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                It's rocket science
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Start Date
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Jun 01, 2020
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                End Date
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Jul 01, 2020
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Created By
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                dwasinge
              </p>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OpenShift Cluster Summary matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card pf-m-compact"
        style="padding: 1rem;"
      >
        <div
          class="pf-c-card__title"
        >
          <div
            class="pf-l-level"
          >
            <div>
              <h3
                class="pf-c-title pf-m-lg"
                style="font-weight: normal;"
              >
                Hosting Environment
                  
                <svg
                  aria-hidden="true"
                  fill="#EC7A08"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    transform=""
                  />
                </svg>
              </h3>
            </div>
            <div />
          </div>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-grid pf-m-gutter"
          >
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Hosting Type
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  OpenShift Container Platform
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Cloud Provider
                </h6>
                <span />
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  OpenShift Version
                </h6>
                <span />
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Storage Size
                </h6>
                <span />
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Cloud Region
                </h6>
                <span />
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Cluster Size
                </h6>
                <span />
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Subdomain
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  ordoabchao
                </p>
              </div>
            </div>
          </div>
        </div>
      </article>
    </div>
    <div />
  </body>,
  "container": <div>
    <article
      class="pf-c-card pf-m-compact"
      style="padding: 1rem;"
    >
      <div
        class="pf-c-card__title"
      >
        <div
          class="pf-l-level"
        >
          <div>
            <h3
              class="pf-c-title pf-m-lg"
              style="font-weight: normal;"
            >
              Hosting Environment
                
              <svg
                aria-hidden="true"
                fill="#EC7A08"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  transform=""
                />
              </svg>
            </h3>
          </div>
          <div />
        </div>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-grid pf-m-gutter"
        >
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Hosting Type
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                OpenShift Container Platform
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Cloud Provider
              </h6>
              <span />
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                OpenShift Version
              </h6>
              <span />
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Storage Size
              </h6>
              <span />
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Cloud Region
              </h6>
              <span />
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Cluster Size
              </h6>
              <span />
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Subdomain
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                ordoabchao
              </p>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Point of Contact Card matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card pf-m-compact"
        style="padding: 1rem;"
      >
        <div
          class="pf-c-card__title"
        >
          <div
            class="pf-l-level"
          >
            <div>
              <h3
                class="pf-c-title pf-m-lg"
                style="font-weight: normal;"
              >
                Points of Contact
                  
                <svg
                  aria-hidden="true"
                  fill="#EC7A08"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    transform=""
                  />
                </svg>
              </h3>
            </div>
            <div />
          </div>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-grid pf-m-gutter"
          >
            <div
              class="pf-l-grid__item pf-m-4-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Engagement Lead
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Alice Doe
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-4-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Technical Lead
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Eve Doe
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-4-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Customer Contact
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Bob Doe
                </p>
              </div>
            </div>
          </div>
        </div>
      </article>
    </div>
    <div />
  </body>,
  "container": <div>
    <article
      class="pf-c-card pf-m-compact"
      style="padding: 1rem;"
    >
      <div
        class="pf-c-card__title"
      >
        <div
          class="pf-l-level"
        >
          <div>
            <h3
              class="pf-c-title pf-m-lg"
              style="font-weight: normal;"
            >
              Points of Contact
                
              <svg
                aria-hidden="true"
                fill="#EC7A08"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  transform=""
                />
              </svg>
            </h3>
          </div>
          <div />
        </div>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-grid pf-m-gutter"
        >
          <div
            class="pf-l-grid__item pf-m-4-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Engagement Lead
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Alice Doe
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-4-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Technical Lead
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Eve Doe
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-4-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Customer Contact
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Bob Doe
              </p>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
